[package]
name = "pngme"
version = "0.1.0"
edition = "2021"
description = "Hide secret messages in PNG files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
crc = "3.0.0"
thiserror = "1.0"
anyhow = "1.0"
